--- a/branches/mscore-0-9-6/mscore/manual/sources/MuseScore-fi.html
+++ b/branches/mscore-0-9-6/mscore/manual/sources/MuseScore-fi.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_7423eb406246b576c7ada51c36831293.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_fac70f7525c6da13ebd0fff70a007539.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"musescore":{"ytlang":"fi"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/fi/k%C3%A4sikirja/k%C3%A4sikirja' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_37c26628655d78e5039a1e41d45c9ca3.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_59b91a212b7eab40c05807c179375612.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,41 +21,42 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Ilmainen musiikin sävellys & nuotinnusohjelma</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/fi">http://musescore.org</a> on Ke, 07/27/2011</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/fi">http://musescore.org</a> on Ti, 01/10/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
     <div class="print-content"><div id="node-1057" class="section-1">
   <h1 class="book-heading">Käsikirja</h1>
-  <p>Tämä käsikirja on MuseScoren versiolle 0.9.3 ja siitä ylöspäin. Jos sinulla on mahdollista auttaa käsikirjan parantamisessa ja kääntämisessä, jätä postia <a class="freelinking external" href="http://www.musescore.org/forum/8">MuseScoren dokumentointifoorumiin</a> ja hakeudu käsikirjan avustajaksi.</p>
+  <p>Tämä käsikirja on MuseScoren versiolle 0.9.4 ja siitä ylöspäin. Jos sinulla on mahdollista auttaa käsikirjan parantamisessa ja kääntämisessä, jätä postia <a href="http://www.musescore.org/forum/8">MuseScoren dokumentointifoorumiin</a> ja hakeudu käsikirjan avustajaksi.</p>
   <div id="node-1078" class="section-2">
   <h1 class="book-heading">Alkutoimet</h1>
   <p>Tämän luvun avulla voit asentaa ja käyttää MuseScorea ensimmäistä kertaa. Luvussa myös näytetään, miten luodaan uusi partituuri.</p>
   <div id="node-1108" class="section-3">
   <h1 class="book-heading">Asennus</h1>
-  <h3>Windows</h3>
+  <p>MuseScore toimii monilla eri tietokonejärjestelmillä kuten Windows, Mac OS ja Linux.</p>
+<h3>Windows</h3>
 <p>Löydät Windows asennusohjelman MuseScoren verkkosivujen <a class="freelinking external" href="http://musescore.org/fi/lataa">lataussivulta</a>. Klikkaa linkkiä aloittaaksesi latauksen. Internet-selaimesi vahvistaa, että haluat ladata tiedoston. Klikkaa "Tallenna tiedosto". </p>
 <p>Kun lataus on valmis tiedoston kaksoisklikkaaminen aloittaa asennuksen. Windows saattaa avata turvallisuus ikkuna ja pyytää teitä vahvistamaan ohjelman käynnistämisen. Valitse "Suorita" jatkaaksesi.</p>
-<p><img src="/sites/musescore.org/files/install-wizard-1-winxp_0.png" alt="Asennusikkuna 1" title="Asennusikkuna 1" width="377" height="295" class="inline" /><br />
-Asennus suosittelee, että suljet kaikki muut sovellukset ennen kuin jatkat. Kun suljet muut sovellukset klikkaa "Seuraava" (”Next”) jatkaaksesi.</p>
+<p><img src="/sites/musescore.org/files/install-wizard-1-winxp_0.png" alt="Asennusikkuna 1" title="Asennusikkuna 1" width="377" height="295" class="inline" /></p>
+<p>Asennus suosittelee, että suljet kaikki muut sovellukset ennen kuin jatkat. Kun suljet muut sovellukset klikkaa "Seuraava" (”Next”) jatkaaksesi.</p>
 <p>Ohjattu asennus näyttää  vapaiden ohjelmien lisenssiehdot jota voi tarkastella. Klikkaa "Hyväksyn" jatkaaksesi.</p>
 <p>Seuraavaksi se pyytää vahvistamaan sijainnin asennukselle MuseScore. Jos asennat uudemman version MuseScoresta, mutta kuitenkin haluat säilyttää vanhan version tietokoneellesi, niin sinun pitäisi vaihtaa kansio. Muuten klikkaa "Seuraava" jatkaaksesi.</p>
 <p>Seuraavaksi se vahvistaa nimen MuseScore-kansiolle, joka näkyy Windowsin Käynnistä-valikon ohjelmat. Klikkaa "Asenna" jatkaaksesi.</p>
-<p>Anna asennusavustajalle aikaa muutama minuutti asentaa tarvittavat tiedostot ja kokoonpanot. Kun se on valmis, klikkaa "Valmis" poistuaksesi asennusohjelmasta. Jos haluat, voit nyt poistaa nyt ladatun asennustiedoston.<br />
-<img src="/sites/musescore.org/files/install-wizard-finish-winxp_1.png" alt="Asennusikkuna 2" title="Asennusikkuna 2" width="377" height="295" class="inline" /></p>
-<h3>Käynnistä MuseScore</h3>
+<p>Anna asennusavustajalle aikaa muutama minuutti asentaa tarvittavat tiedostot ja kokoonpanot. Kun se on valmis, klikkaa "Valmis" poistuaksesi asennusohjelmasta. Jos haluat, voit nyt poistaa nyt ladatun asennustiedoston.</p>
+<p><img src="/sites/musescore.org/files/install-wizard-finish-winxp_1.png" alt="Asennusikkuna 2" title="Asennusikkuna 2" width="377" height="295" class="inline" /></p>
+<h4>Käynnistä MuseScore</h4>
 <p>Käynnistä MuseScore valitsemalla <kbd><samp class="menu">Käynnistä</samp> → <samp class="submenu">Kaikki ohjelmat</samp> → <samp class="submenu">MuseScore</samp> → <samp class="menuitem">MuseScore</samp></kbd>. </p>
 <p>Muutaman sekunnin kuluttua MuseScore avaa demo-partituurin. Voit vapaasti kokeilla esittelypartituuria ja saada tuntumaa ohjelmaan. Seuraavaksi voit <a href="http://musescore.org/fi/käsikirja/luo-uusi-partituuri" title="luo uusi partituuri">luoda oman partituurin</a>.</p>
 <p><img src="/sites/musescore.org/files/screenshot-demo-score-fi.png" alt="Kuvakaappaus aloitussivulta" title="Kuvakaappaus aloitussivulta" width="500" height="489" class="inline" /></p>
 <h4>Edistyneille käyttäjille : Hiljainen tai valvomaton asennus</h4>
 <p>Voit asentaa MuseScoren hiljaisesti suraavalla komennolla<br />
-<code>MuseScore-0.9.6.3.exe /S /D=C:\Program Files\MuseScore</code><br />
+<code>MuseScore-1.1.exe /S /D=C:\Program Files\MuseScore</code><br />
 Voit poistaa asennuksen<br />
 <code>cd C:\Program Files\MuseScore<br />
 Uninstall.exe /S</code></p>
 <h3 id="mac-installation">MacOSX</h3>
 <h4>Asennus</h4>
-<p>Löydät Macin dmg-tiedoston MuseScoren <a href="http://musescore.org/fi/lataa">Lataa</a> -webbisivulta. Käynnistä lataus klikkaamalla linkkiä. Kun lataus on suoritettu, dmg-tiedosto liitetään automaattisesti työpöydälle nimellä "MuseScore-0.9.5" ja asennin ilmestyy.</p>
+<p>Löydät Macin dmg-tiedoston MuseScoren <a href="http://musescore.org/fi/lataa">Lataa</a> -webbisivulta. Käynnistä lataus klikkaamalla linkkiä. Kun lataus on suoritettu, dmg-tiedosto liitetään automaattisesti työpöydälle nimellä "MuseScore-0.9.6" ja asennin ilmestyy.</p>
 <p><img src="/sites/musescore.org/files/install_mac_0963.png" alt="Mac asennus" title="Mac asennus" width="460" height="642" class="inline" /></p>
 <p>Vedä MuseScore-kuvaketta ja pudota se Sovellukset-kansioikonin päälle (Applications). Jos et ole järjestelmänvalvoja, MacOSX kysyy salasanaa.<br />
 Voit käynnistää MuseScoren Sovelluksista tai SpotLight'ista.</p>
@@ -488,9 +489,11 @@ Kahvojen siirtäminen pelkästään oikealla tai vasemmalla nuolinäppäimellä 
 <p>Jos siirrät kahvoja, katkoviiva näyttää loogisesta sijainnista toiminnalliseen sijaintiin.<br />
 <img src="/sites/musescore.org/files/volta2_0.png" alt="Kakkosmaali muokkaustilassa" title="Kakkosmaali muokkaustilassa" width="483" height="77" class="inline" /></p>
 <h3>Teksti</h3>
-<p>Voit muuttaa tekstiä ja monia muita maalin ominaisuuksia käyttämällä Viivan ominaisuudet -valintaikkunaa. Klikkaa hiiren oikealla maalin hakasta ja valitse <kbd><samp class="menuitem">Viivan ominaisuudet ...</samp></kbd>. Jos käytät versiota 0.9.3 tai vanhempaa valitse "Maalin ominaisuudet ..." Alla olevassa kuvassa maaliteksti on "1.- 5."</p>
+<p>Voit muuttaa tekstiä ja monia muita maalin ominaisuuksia käyttämällä Viivan ominaisuudet -valintaikkunaa. Klikkaa hiiren oikealla maalin hakasta ja valitse <kbd><samp class="menuitem">Viivan ominaisuudet ...</samp></kbd>. Alla olevassa kuvassa maaliteksti on "1.- 5."</p>
 <p><img src="/sites/musescore.org/files/volta-line-properties.png" alt="Viivan ominaisuudet valintaikkuna" title="Viivan ominaisuudet valintaikkuna" width="607" height="219" class="inline" /></p>
 <p><img src="/sites/musescore.org/files/volta4_0.png" alt="Esimerkki maaleista yksi-viisi mitä seuraa kuudes maali" title="Esimerkki maaleista yksi-viisi mitä seuraa kuudes maali" width="401" height="73" class="inline" /></p>
+<p>Voit myös napsauttaa hiiren kakkospainikkeella maalia ja tuoda esiin Maalin ominaisuudet. Täältä voit vaihtaa molemmat näkyvät maaliteksti (sama kuin Viivan ominaisuudet yllä) ja Toistolistan. Jos haluat toistaa yhden maalin vain tietyllä kerralla ja toisen maalin toisella kerralla, anna toistokerrat pilkuilla erotettuina. Alla olevassa esimerkissä, tämä maali toistetaan toistojen 1, 2, 4, 5 ja 7 aikana. Toinen maali toistetaan muilla kerroilla, kuten 3, 6 ja mahdollisesti muilla suuremmilla kerroilla kuten 8, 9, jne.</p>
+<p><img src="/sites/musescore.org/files/volta-properties.png" alt="Volta Properties dialog" title="Volta Properties dialog" width="529" height="297" class="inline" /></p>
 <h3>Toistaminen</h3>
 <p>Joskus toistoja on enemmän kuin kaksi. Yllä olevassa kuvassa maaliteksti näyttää, että se toistetaan viisi kertaa ennen kuin jatketaan. Jos haluat muuttaa montako kertaa MuseScore soittaa toiston mene tahtiin jossa on kertausmerkki ja vaihda toistokertojen määrä (katso yksityiskohdat <a href="http://musescore.org/fi/käsikirja/tahtioperaatiot" title="tahtioperaatiot">Tahtioperaatioista</a>).</p>
 <h3 class="v0-9-4">Ongelmia moniviivastoisissa partituureissa</h3>
@@ -511,10 +514,11 @@ Kahvojen siirtäminen pelkästään oikealla tai vasemmalla nuolinäppäimellä 
   <h1 class="book-heading">Arpeggio ja Glissando</h1>
   <p><strong>Arpeggio</strong> (Murtosointu) -merkintä asetetaan vetämällä vastaava symboli Arpeggio &amp; Glissando -paletista sointunuotin päälle.</p>
 <p><img src="/sites/musescore.org/files/arpeggiopalette_fi.png" alt="Arpeggio -paletti" title="Arpeggio -paletti" width="169" height="85" class="inline" /></p>
-<p>Versiossa 0.9.5 tai uudemmassa, voit muokata arpeggion pituutta tuplaklikkaamalla sitä ja vetämällä kahvasta ylös tai alas.</p>
+<p>Voit muokata arpeggion pituutta tuplaklikkaamalla sitä ja vetämällä kahvasta ylös tai alas.</p>
 <p><img src="/sites/musescore.org/files/arpeggio-multi-staff_0.png" alt="Arpeggio ulottuen kahdelle viivastolle" title="Arpeggio ulottuen kahdelle viivastolle" width="136" height="110" class="inline" /></p>
 <p><strong>Glissandos</strong> asetetaan vetämällä glissando symbol Arpeggio &amp; Glissando -paletista ensimmäiseen, saman viivaston kahdesta peräkkäisestä nuotista.</p>
 <p><img src="/sites/musescore.org/files/glissando_uses.png" alt="MuseScore can create glissandos with a straight line or a zig-zag line" title="MuseScore can create glissandos with a straight line or a zig-zag line" width="534" height="87" class="inline" /></p>
+<p>Muokkaa tai poista glissando-teksti klikkaamalla hiiren oikeaa painiketta ja valitsemalla valikosta "Glissando-ominaisuudet". Jos tilaa ei ole tarpeeksi kahden nuotin välillä, MuseScore ei näytä tekstiä.</p>
 <div class="field field-type-filefield field-field-file">
     <div class="field-items">
             <div class="field-item odd">
@@ -965,8 +969,8 @@ Painamalla Toisto <img src="/sites/musescore.org/files/play.png" alt="Toista" ti
   <ol>
 <li>Syötä ensin nuotit</li>
 <li>Valitse ensimmäinen nuotti</li>
-<li>Paina <kbd><kbd>Ctrl</kbd>+<kbd>L</kbd></kbd> ja kirjoita lauluteksti ensimmäiselle nuotille</li>
-<li>Paina <kbd><kbd>Välilyönti</kbd></kbd> sanan lopussa, niin pääset seuraavaan nuottiin</li>
+<li>Valitse päävalikosta <kbd><samp class="menu">Luo</samp> → <samp class="submenu">Teksti</samp> → <samp class="menuitem">Lauluteksti</samp></kbd> ja kirjoita ensimmäinen tavu tälle nuotille.</li>
+<li>Paina <kbd><kbd>Välilyönti</kbd></kbd> sanan lopussa, niin pääset seuraavaan nuottiin.</li>
 <li>Paina tavuviiva <kbd><kbd>-</kbd></kbd> tavun lopussa, niin pääset seuraavaan nuottiin. Tavut kiinnittyvät viivaan.</li>
 <li><kbd><kbd>Vaihto</kbd>+<kbd>Välilyönti</kbd></kbd> siirtää edelliseen nuottiin</li>
 <li><kbd><kbd>Enter</kbd></kbd> (Mac: <kbd><kbd>Return</kbd></kbd>) siirtää alas seuraavalle tekstiriville</li>
@@ -976,7 +980,7 @@ Painamalla Toisto <img src="/sites/musescore.org/files/play.png" alt="Toista" ti
 <img src="/sites/musescore.org/files/lyrics1_0.png" alt="Tavun jatkoviiva" title="Tavun jatkoviiva" width="351" height="214" class="inline" /></p>
 <p>Kirjoitettu: <kbd>soul, <kbd>_</kbd> <kbd>_</kbd> <kbd>_</kbd> To <kbd>Esc</kbd></kbd>.</p>
 <h3>Erikoismerkit</h3>
-<p>Laulutekstiä voi <a href="http://musescore.org/fi/käsikirja/tekstin-muokkaaminen" title="tekstin muokkaaminen">muokata</a> kuten normaalia tekstiä muutamaa merkkiä lukuun ottamatta. Jos haluat lisätä välilyönnin, yhdysmerkin tai alaviivan samaan tavuun, käytä seuraavia pikanäppäimiä. </p>
+<p>Laulutekstiä voi <a href="http://musescore.org/fi/käsikirja/tekstin-muokkaaminen" title="tekstin muokkaaminen">muokata</a> kuten normaalia tekstiä muutamaa merkkiä lukuun ottamatta. Jos haluat lisätä tavuviivan, yhdysmerkin tai alaviivan samaan tavuun, käytä seuraavia pikanäppäimiä. </p>
 <ul>
 <li><kbd><kbd>Ctrl</kbd>+<kbd>Välilyönti</kbd></kbd> (Mac: <kbd><kbd>⌥</kbd>+<kbd>Välilyönti</kbd></kbd>) lisää <samp>välilyönnin</samp> laulutekstiin</li>
 <li><kbd><kbd>Ctrl</kbd>+<kbd>-</kbd></kbd> (Mac: <kbd><kbd>⌥</kbd>+<kbd>-</kbd></kbd>) lisää tavuviivan (<samp>-</samp>) laulutekstiin</li>
@@ -1052,7 +1056,7 @@ Pystysuorat kehykset varaavat tyhjää tilaa väliin tai ennen viivastoja. Korke
 </div>
 </div>
     <div class="print-taxonomy"></div>
-    <div class="print-footer">Lisenssi: <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Navngivelse 3.0 Unported</a> licens, 2002-2011 <a href="mailto:werner@musescore.org">Werner Schweer</a> ja muut.</div>
+    <div class="print-footer">Lisenssi: <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Navngivelse 3.0 Unported</a> licens, 2002-2012 <a href="mailto:werner@musescore.org">Werner Schweer</a> ja muut.</div>
     <hr class="print-hr" />
     <div class="print-source_url"></div>
     <div class="print-links"></div>
