--- a/branches/mscore-0-9-6/mscore/manual/sources/MuseScore-it.html
+++ b/branches/mscore-0-9-6/mscore/manual/sources/MuseScore-it.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_ee7ef598ac28ec452dbb178510d817a5.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_94eb3f241eaf0131daae9803a0d7c671.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"musescore":{"ytlang":"it"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/it/manuale/indice' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_37c26628655d78e5039a1e41d45c9ca3.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_59b91a212b7eab40c05807c179375612.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Software libero di composizione e notazione musicale</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/it">http://musescore.org</a> on Mer, 07/27/2011</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/it">http://musescore.org</a> on Mar, 01/10/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -682,17 +682,13 @@ Tutte le stanghette della partitura saranno modificate e la modifica sarà visib
   <h1 class="book-heading">Voci</h1>
   <p>Le <strong>voci</strong> permettono di posizionare in un pentagramma delle note che iniziano nello stesso punto ma che hanno durata differente. Le voci sono anche chiamate 'layers' in altri software di notazione musicale.</p>
 <p><img src="/sites/musescore.org/files/voices-diagram.png" alt="In una battuta polifonica le note della Voce 1 hanno i gambi in su, le note della Voce 2 hanno i gambi in giù" title="In una battuta polifonica le note della Voce 1 hanno i gambi in su, le note della Voce 2 hanno i gambi in giù" width="324" height="70" class="inline" /></p>
-<h3>Instruzioni</h3>
+<h3>Istruzioni</h3>
 <ol>
-<li>Per prima cosa inserire la voce più alta (tutte le note devono avere i gambi rivolti verso l'alto).</li>
-<li>Quando si inseriscono le note alcune di queste possono avere il gambo rivolto in giù. Se state usando la versione 0.9.4 o successiva non è necessario intervenire perché la direzione dei gambi sarà automaticamente invertita quando verrà aggiunta la seconda voce.<br />
+<li>Per prima cosa inserire la voce più alta (tutte le note devono avere i gambi rivolti verso l'alto). Quando si inseriscono le note alcune di queste possono avere il gambo rivolto in giù. Non è necessario intervenire perché la direzione dei gambi sarà automaticamente invertita quando verrà aggiunta la seconda voce.<br />
 <img src="/sites/musescore.org/files/voices0.png" alt="note della Voce 1" title="note della Voce 1" width="337" height="46" class="inline" /></li>
-<li class="v0-9-3"><strong class="label">Soltanto per la versione 0.9.3:</strong> Se state usando la versione 0.9.3 o precedente prima di inserire la seconda voce si devono invertire verso l'alto tutti i gambi delle note della prima voce. Selezionare una nota e fare clic sul pulsante <img src="/sites/musescore.org/files/flipdirection.png" alt="Inverti direzione gambi note" title="Inverti direzione gambi note" width="26" height="33" class="inline" /> "Inverte orientamento gambi note o legatura" sulla barra degli strumenti oppure premere <kbd><kbd>X</kbd></kbd> sulla tastiera.<br />
-<img src="/sites/musescore.org/files/voices1.png" alt="note della Voce 1 con i gambi in su" title="note della Voce 1 con i gambi in su" width="338" height="50" class="inline" /></li>
-<li>Se per inserie le note si usa la tastiera del computer o una tastiera MIDI (invece del mouse), utilizzare il tasto freccia <kbd><kbd>←</kbd></kbd> per riportare il cursore all'inizio della battuta.</li>
-<li>Fare clic sul pulsante <img src="/sites/musescore.org/files/voice-2-button.png" alt="Voce 2 selezionata" title="Voce 2 selezionata" width="18" height="12" class="inline" /> "Voce 2" e iniziare ad inserire la seconda voce (tutte le note devono avranno i gambi rivolti verso il basso).</li>
-<li class="v0-9-3"><strong class="label">Soltanto per la versione 0.9.3:</strong> Ancora una volta se usate la versione 0.9.3 o precedente prima di andare avanti dovete invertire verso il basso i gambi delle note utilizzando <kbd><kbd>X</kbd></kbd> sulla tastiera oppure il pulsante<img src="/sites/musescore.org/files/flipdirection.png" alt="Inverti direzione gambi note" title="Inverti direzione gambi note" width="26" height="33" class="inline" /> "Inverte orientamento gambi note o legatura"</li>
-<li>Alla fine il risultato sarà come l'esempio seguente:<br />
+<li>Se per inserire le note si usa la tastiera del computer o una tastiera MIDI (invece del mouse), utilizzare il tasto freccia <kbd><kbd>←</kbd></kbd> per riportare il cursore all'inizio della battuta.</li>
+<li>Fare clic sul pulsante <img src="/sites/musescore.org/files/voice-2-button.png" alt="Voce 2 selezionata" title="Voce 2 selezionata" width="18" height="12" class="inline" /> "Voce 2"</li>
+<li>Iniziare ad inserire la voce inferiore (tutte le note avranno i gambi rivolti verso il basso). Alla fine il risultato sarà come l'esempio seguente:<br />
 <img src="/sites/musescore.org/files/voices2.png" alt="Voci 1 e 2" title="Voci 1 e 2" width="405" height="61" class="inline" /></li>
 </ol>
 <h3>Quando usare le voci</h3>
@@ -701,7 +697,7 @@ Tutte le stanghette della partitura saranno modificate e la modifica sarà visib
 <li>Se desiderate inserire in un pentagramma delle note di differente durata che suonino contemporaneamente</li>
 </ul>
 <h3>Nascondere le pause</h3>
-<p>Per nascondere una pausa fare clic con il tasto destro del mouse e selezionare <kbd><samp class="menuitem">Rendi Invisibile</samp></kbd>. Se nel menù è selezionata l'opzione <kbd><samp class="menu">Mostra</samp> → <samp class="menuitem">Oggetti Nascosti</samp></kbd> la pausa sarà visualizzata in grigio sullo schermo. La pausa non sarà comunque visibile nella stampa.</p>
+<p>Per nascondere una pausa fare clic con il tasto destro del mouse sulla pausa stessa e selezionare <kbd><samp class="menuitem">Rendi Invisibile</samp></kbd>. Se nel menù è selezionata l'opzione <kbd><samp class="menu">Mostra</samp> → <samp class="menuitem">Oggetti Nascosti</samp></kbd> la pausa sarà visualizzata in grigio sullo schermo. La pausa non sarà comunque visibile nella stampa.</p>
   </div>
 <div id="node-920" class="section-3">
   <h1 class="book-heading">Volta</h1>
@@ -718,9 +714,11 @@ Gli altri comandi della <samp class="mode"><a href="http://musescore.org/it/manu
 Se spostate le "maniglie" viene mostrata una linea tratteggiata tra la posizione logica (ancoraggio) e quella grafica.<br />
 <img src="/sites/musescore.org/files/volta2_0.png" alt="Seconda volta in modalità di modifica" title="Seconda volta in modalità di modifica" width="483" height="77" class="inline" /></p>
 <h4>Testo</h4>
-<p>È possibile cambiare il testo e altre proprietà del simbolo di volta. Fare clic con il tasto destro del mouse sul simbolo e selezionare <kbd><samp class="menuitem">Proprietà linea...</samp></kbd>. Se state utilizzando la versione 0.9.3 o precedente selezionare "Proprietà Volta..." La figura seguente mostra l'esempio di una ripetizione "1.-5."</p>
+<p>È possibile cambiare il testo e altre proprietà del simbolo di volta. Fare clic con il tasto destro del mouse sul simbolo e selezionare <kbd><samp class="menuitem">Proprietà linea...</samp></kbd>. La figura seguente mostra l'esempio di una ripetizione "1.-5."</p>
 <p><img src="/sites/musescore.org/files/volta-line-properties.png" alt="Finestra di dialogo Prorietà Linea" title="Finestra di dialogo Prorietà Linea" width="607" height="219" class="inline" /></p>
 <p><img src="/sites/musescore.org/files/volta4_0.png" alt="Sample first-through-fifth ending followed by sixth ending" title="Sample first-through-fifth ending followed by sixth ending" width="401" height="73" class="inline" /></p>
+<p>È possibile anche cliccare con il tasto destro del mouse sul simbolo di Volta e selezionare Proprietà Volta. Apparirà la seguente figura di dialogo dalla quale è possibile cambiare sia il testo del simbolo Volta (come da Proprietà Linea, il testo è lo stesso) sia l'Elenco Ripetizioni. Se si vuole che un finale sia suonato soltanto in alcune ripetizioni e un altro finale sia invece suonato in altre ripetizioni, digitare le ripetizioni desiderate separandole con una virgola. Nell'esempio qui sotto, questa Volta verrà suonata durante le ripetizioni 1, 2, 4, 5 e 7. Un'altra Volta avrà l'altro finale, come 3, 6 ed eventualmente altri numeri più alti quali 8, 9, ecc.</p>
+<p><img src="/sites/musescore.org/files/volta-properties.png" alt="Volta Properties dialog" title="Volta Properties dialog" width="529" height="297" class="inline" /></p>
 <h3>Riproduzione</h3>
 <p>A volte il ritornello deve essere ripetuto per più di due volte. nella figura qui sopra il testo indica che deve essere ripetuto per cinque volte. Se si desidera che MuseScore  suoni il ritornello in maniera corretta selezionare la battuta con la stanghetta del ritornello e modificare il parametro "conteggio ripetizione"  (vedi <a href="http://musescore.org/it/manuale/azioni-sulle-battute" title="Azioni sulle battute">Azioni sulle battute</a> per i dettagli).</p>
 <h3 class="v0-9-4">Problema con partiture di più strumenti</h3>
@@ -818,8 +816,7 @@ Premendo il pulsante "Avvia riproduzione" <img src="/sites/musescore.org/files/p
 <li>Selezionare il testo (es. Moderato) ed eventualmente modificare i battiti per minuto (BPM)</li>
 <li>Premere <kbd><samp class="button">OK</samp></kbd> per finire</li>
 </ul>
-<p>Nelle versioni 0.9.3 o precedenti non è possibile cambiare il testo Tempo o i battiti per minuto (BPM) nella finestra di dialogo "Crea Nuovo Spartito - Crea Unità di tempo". È possibile comunque modificarli aggiungendo la casella di testo "Tempo" nella partitura in un secondo momento.</p>
-<p>Il testo di una casella "Tempo" già inserita può essere modificato facendo un doppio clic sul testo (si entra nella <samp class="mode"><a href="http://musescore.org/it/manuale/modalità-di-modifica" title="Modalità di modifica">Modalità di modifica</a></samp>). È possibile ora premendo il tasto <a href="http://musescore.org/it/manuale/inserimento-e-modifica-testo" title="Inserimento e modifica testo">F2 tavolozza del testo</a> inserire nella casella il simbolo di una semiminima o un altro simbolo per descrivere il tempo del metronomo.<br />
+<p>Il testo di una casella "Tempo" già inserita può essere modificato facendo un doppio clic sul testo (si entra nella <samp class="mode"><a href="http://musescore.org/it/manuale/modalità-di-modifica" title="Modalità di modifica">Modalità di modifica</a></samp>). È possibile utilizzare i <a href="http://musescore.org/it/manuale/inserimento-e-modifica-testo" title="Inserimento e modifica testo">simboli e i caratteri speciali</a> per inserire nella casella il simbolo di una semiminima o un altro simbolo per descrivere il tempo del metronomo.<br />
 <img src="/sites/musescore.org/files/met_mark.jpg" alt="Metronome mark: Andante quarter note = 75" title="Metronome mark: Andante quarter note = 75" width="123" height="29" class="inline" /></p>
 <p>I battiti per minuto (BPM) di un tempo esistente può essere modificato facendo clic con il tasto destro del mouse sul testo e selezionando <kbd><samp class="menuitem">Proprietà Tempo ...</samp></kbd></p>
 <p>Nota: se nella finestra "Controlli riproduzione" il tempo selezionato non è 100 %, allora  il tempo reale durante la riproduzione potrà essere più lento o più veloce di quanto indicato nella casella di testo "Tempo".</p>
@@ -867,20 +864,19 @@ Premendo il pulsante "Avvia riproduzione" <img src="/sites/musescore.org/files/p
 <img src="/sites/musescore.org/files/textedit_0.png" alt="Sample text in edit mode" title="Sample text in edit mode" width="83" height="101" class="inline" /></p>
 <p>Nella <samp class="mode">Modalità di modifica</samp> del testo sono disponibili i seguenti comandi:</p>
 <ul>
-<li><kbd><kbd>Ctrl</kbd>+<kbd>B</kbd></kbd> abilita il grassetto (bold)</li>
-<li><kbd><kbd>Ctrl</kbd>+<kbd>I</kbd></kbd> abilita il corsivo (italic)</li>
-<li><kbd><kbd>Ctrl</kbd>+<kbd>U</kbd></kbd> abilita il sottolineato (underline)</li>
-<li><kbd><kbd>↑</kbd></kbd> abilita apice (oppure disabilita pedice)</li>
-<li><kbd><kbd>↓</kbd></kbd> abilita pedice (oppure disabilita apice)</li>
-<li>movimenti del cursore: <kbd><kbd>Home</kbd></kbd> <kbd><kbd>Fine</kbd></kbd> <kbd><kbd>←</kbd></kbd> <kbd><kbd>→</kbd></kbd></li>
+<li><kbd><kbd>Ctrl</kbd>+<kbd>B</kbd></kbd> (Mac: <kbd><kbd>⌘</kbd>+<kbd>B</kbd></kbd>) abilita il grassetto (bold)</li>
+<li><kbd><kbd>Ctrl</kbd>+<kbd>I</kbd></kbd>(Mac: <kbd><kbd>⌘</kbd>+<kbd>I</kbd></kbd>)  abilita il corsivo (italic)</li>
+<li><kbd><kbd>Ctrl</kbd>+<kbd>U</kbd></kbd> (Mac: <kbd><kbd>⌘</kbd>+<kbd>U</kbd></kbd>) abilita il sottolineato (underline)</li>
+<li>movimenti del cursore: <kbd><kbd>Home</kbd></kbd> <kbd><kbd>Fine</kbd></kbd><kbd><kbd>←</kbd></kbd> <kbd><kbd>→</kbd></kbd></li>
 <li><kbd><kbd>Backspace</kbd></kbd> cancella il carattere a sinistra del cursore</li>
 <li><kbd><kbd>Del</kbd></kbd> cancella il carattere a destra del cursore</li>
 <li><kbd><kbd>Invio</kbd></kbd> inizia una nuova linea</li>
-<li><kbd><kbd>F2</kbd></kbd> mostra la tavolozza del testo. Questa tavolozza può essere usata per immettere caratteri speciali e simboli.</li>
+<li><kbd><kbd>F2</kbd></kbd> mostra la tavolozza dei simboli di testo (vedi sotto). </li>
 </ul>
-<p>Tavolozza del testo:<br />
-<img src="/sites/musescore.org/files/special-text-symbols_1.png" alt="The text palette contains methods for changing text alignment, style, size, and font, plus buttons for inserting symbols into the text such as a quarter note or special characters such as a copyright symbol or accented letters." title="The text palette contains methods for changing text alignment, style, size, and font, plus buttons for inserting symbols into the text such as a quarter note or special characters such as a copyright symbol or accented letters." width="562" height="263" class="inline" /></p>
-<p>Vedi anche: <a href="http://musescore.org/it/manuale/nomi-degli-accordi" title="Nomi degli accordi">Nomi degli accordi</a>, <a href="http://musescore.org/it/manuale/parole" title="Parole">Parole</a></p>
+<h3>Simboli e caratteri speciali</h3>
+<p>Si possono usare i simboli di testo per inserire note di un quarto, frazioni, e altri simboli speciali o caratteri nel testo. Cliccare nella toolbar nella parte bassa dello schermo sull'icona <img src="/sites/musescore.org/files/special-text-symbols-button.png" alt="special-text-symbols-button.png" title="special-text-symbols-button.png" width="31" height="28" class="inline" /> per aprire la tavolozza dei simboli di testo. Nella toolbar è possibile fare clic sui pulsanti freccia su e freccia giù per abilitare e disabilitare apice e pedice.</p>
+<p><img src="/sites/musescore.org/files/special-text-symbols_1.png" alt="The text palette contains methods for changing text alignment, style, size, and font, plus buttons for inserting symbols into the text such as a quarter note or special characters such as a copyright symbol or accented letters." title="The text palette contains methods for changing text alignment, style, size, and font, plus buttons for inserting symbols into the text such as a quarter note or special characters such as a copyright symbol or accented letters." width="562" height="263" class="inline" /></p>
+<p>Vedi anche: <a href="http://musescore.org/it/manuale/nomi-degli-accordi" title="Nomi degli accordi">Nomi degli accordi</a>, <a href="http://musescore.org/it/manuale/parole" title="Parole">Parole</a>, <a href="http://musescore.org/it/manuale/caselle" title="Caselle">Caselle</a>, <a href="http://musescore.org/it/manuale/modalità-di-modifica" title="Modalità di modifica">Modalità di modifica</a></p>
   </div>
 <div id="node-935" class="section-3">
   <h1 class="book-heading">Stile del testo</h1>
@@ -1268,9 +1264,6 @@ Voce 4: <kbd><kbd>Ctrl</kbd>+<kbd>I</kbd>, <kbd>Ctrl</kbd>+<kbd>4</kbd></kbd></p
 Diminuisci di un'ottava l'altezza dell'ultima nota inserita: <kbd><kbd>Ctrl</kbd>+<kbd>↓</kbd></kbd></p>
 <p>Aumenta l'altezza di un semitono (utilizza i diesis): <kbd><kbd>↑</kbd></kbd><br />
 Diminuisce l'altezza di un semitono (utilizza i bemolle): <kbd><kbd>↓</kbd></kbd></p>
-<p>Aggiunge un diesis alla nota: <kbd><kbd>ò</kbd></kbd><br />
-Aggiunge un bequadro alla nota: <kbd><kbd>à</kbd></kbd><br />
-Aggiunge un bemolle alla nota: <kbd><kbd>ù</kbd></kbd></p>
 <p>Pausa: <kbd><kbd>0</kbd></kbd> (zero). Nella versione 0.9.6 e precedenti, pausa: <kbd><kbd>Spazio</kbd></kbd> </p>
 <h4>Intervalli</h4>
 <p>Aggiunge un intervallo superiore: <kbd><kbd>Alt</kbd>+[Numero]</kbd><br />
@@ -1301,7 +1294,7 @@ Zoom: <kbd><kbd>Ctrl</kbd></kbd>+ rotella del mouse</p>
 </div>
 </div>
     <div class="print-taxonomy"></div>
-    <div class="print-footer">Sotto licenza <a href="http://creativecommons.org/licenses/by/3.0/deed.it">Creative Commons Attribution 3.0</a>, 2002-2011 <a href="mailto:werner@musescore.org">Werner Schweer</a> e altri.</div>
+    <div class="print-footer">Sotto licenza <a href="http://creativecommons.org/licenses/by/3.0/deed.it">Creative Commons Attribution 3.0</a>, 2002-2012 <a href="mailto:werner@musescore.org">Werner Schweer</a> e altri.</div>
     <hr class="print-hr" />
     <div class="print-source_url"></div>
     <div class="print-links"></div>
