--- a/branches/mscore-0-9-6/mscore/manual/sources/MuseScore-nb.html
+++ b/branches/mscore-0-9-6/mscore/manual/sources/MuseScore-nb.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_1ba5e96e779e1388c5babffb705e350a.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_825625540eb4199747ec2b2446f46e96.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"musescore":{"ytlang":"nb"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/nb/h%C3%A5ndbok/h%C3%A5ndbok' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_37c26628655d78e5039a1e41d45c9ca3.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_59b91a212b7eab40c05807c179375612.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Fri og åpen programvare for komposisjon og noteskriving</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/nb">http://musescore.org</a> on ons, 07/27/2011</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/nb">http://musescore.org</a> on tir, 01/10/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -381,6 +381,7 @@ Se &rarr;<a class="freelinking external" href="http://musescore.org/nb/h%C3%A5nd
 <li>Bestem varighet for noten (eller pausen) du ønsker å legge til.</li>
 <li>Velg tonehøyde (eller pause) med hurtigtastene, musen eller MIDI-keyboard.</li>
 </ol>
+<p>For å legge til noter <b>som er overlappende, men starter eller slutter på forskjellig tid</b>, se <a class="freelinking external" href="http://musescore.org/nb/håndbok/stemmer">Stemmer</a>.</p>
 <h3>Steg 1: Startposisjon</h3>
 <p>Først velger du en note eller en pause på notearket der du ønsker å starte å skrive inn noter. Hver gang du legger inn en note erstatter du en annen note eller en pause (overskriver i stedet for å legge til). Du kan legge til nye takter når som helst (se <a href="http://musescore.org/nb/håndbok/taktoperasjoner" title="Taktoperasjoner">Taktoperasjoner</a>) eller bruke <a href="http://musescore.org/nb/håndbok/kopier-og-lim-inn" title="Kopier og lim inn">kopier og lim inn</a> for å flytte eller kopiere en samling noter.</p>
 <h3>Steg 2: Noteskrivingsmodus</h3>
@@ -449,7 +450,8 @@ Legg merke til at noten B tilsvarer noten H på norsk. For å legge inn en H, br
 <p>Merk: MIDI-keyboardet legger til én note om gangen. Denne måten å legge inn noter på er rask og pålitelig. Noen musikkprogrammer prøver å bruke en innsettingsmetode der musikeren spiller inn et stykke og programmet prøver å sette sammen notasjonen deretter. Denne metoden er dog upålitelig selv med en dyktig musiker og dyr programvare. Fokuset til MuseScore er å skrive inn noter med MIDI-keyboard på en pålitelig måte.</p>
 <p>Hvis du har flere MIDI-kilder koblet til datamaskinen, kan det være at du må fortelle MuseScore hvilken kilde som er MIDI-keyboardet. I versjon 0.9.6 og senere må du gå til <kbd><samp class="menu">Rediger</samp> → <samp class="menuitem">Innstillinger...</samp></kbd> (Mac: <kbd><samp class="menu">MuseScore</samp> → <samp class="menuitem">Innstillinger...</samp></kbd>). I innstillingsvinduet gå til fanen <kbd><samp class="tab">Inn/Ut</samp></kbd> og velg riktig MIDI-kilde under "Velg PortMidi inndatakilde".</p>
 <h3>Fargede noter utenfor egnet tonehøyde</h3>
-<p>MuseScore kan indikere om en note er utenfor rekkevidden til instrumentet, fra versjon 0.9.5. Noter over eller under den komfortable rekkevidden til en amatør farges gule, mens noter utenfor den komfortable rekkevidden til en profesjonell musiker farges røde. Fargene er kun indikasjoner, og vises på dataskjermen men ikke på utskrifter av notearket. For å slå av farging av noter i versjon 0.9.6 og senere, velg <kbd><samp class="menu">Rediger</samp> → <samp class="menuitem">Innstillinger...</samp></kbd> (Mac: <kbd><samp class="menu">MuseScore</samp> → <samp class="menuitem">Innstillinger...</samp></kbd>), klikk på fanen <kbd><samp>Noteskriving</samp></kbd>, og ta vekk avkryssingen for "Fargelegg noter utenfor egnet tonehøyde".</p>
+<p>Noter innenfor den vanlige spillbare rekkevidden til et instrument eller en vokalstemme farges svarte. MuseScore 0.9.5 og senere kan indikere om en note er utenfor rekkevidden til instrumentet. For noen instrumenter er denne rekkevidden avhengig av utøverens kompetanse (slik som strykeinstrumenter, blåseinstrumenter eller vokal). For disse instrumentene vil noter over eller under den komfortable rekkevidden til en amatør farges gule, mens noter utenfor den komfortable rekkevidden til en profesjonell musiker farges røde. </p>
+<p>Fargene er kun indikasjoner, og vises på dataskjermen men ikke på utskrifter av notearket. For å slå av farging av noter i versjon 0.9.6 og senere, velg <kbd><samp class="menu">Rediger</samp> → <samp class="menuitem">Innstillinger...</samp></kbd> (Mac: <kbd><samp class="menu">MuseScore</samp> → <samp class="menuitem">Innstillinger...</samp></kbd>), klikk på fanen <kbd><samp>Noteskriving</samp></kbd>, og ta vekk avkryssingen for "Fargelegg noter utenfor egnet tonehøyde".</p>
 <h3>Se også</h3>
 <ul>
 <li><a href="http://musescore.org/nb/håndbok/trommenotasjon" title="Trommenotasjon">Trommenotasjon</a></li>
@@ -1436,7 +1438,7 @@ For å feilsøke etter dette problemet:</p>
 </div>
 </div>
     <div class="print-taxonomy"></div>
-    <div class="print-footer">Lisensiert under <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a> lisensen, 2002-2011 <a href="mailto:werner@musescore.org">Werner Schweer</a> med flere.</div>
+    <div class="print-footer">Lisensiert under <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a> lisensen, 2002-2012 <a href="mailto:werner@musescore.org">Werner Schweer</a> med flere.</div>
     <hr class="print-hr" />
     <div class="print-source_url"></div>
     <div class="print-links"></div>
