--- a/branches/mscore-0-9-6/mscore/manual/sources/MuseScore-hu.html
+++ b/branches/mscore-0-9-6/mscore/manual/sources/MuseScore-hu.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_a9a7010ce5eef4292818dc4d3e6e8c7a.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_b223f415db256e0219f067c2be2dfd86.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"musescore":{"ytlang":"hu"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/hu/k%C3%A9zik%C3%B6nyv/k%C3%A9zik%C3%B6nyv' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_37c26628655d78e5039a1e41d45c9ca3.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_59b91a212b7eab40c05807c179375612.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Ingyenes zeneszerző & kottaszerkesztő szoftver</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/hu">http://musescore.org</a> on sze, 07/27/2011</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/hu">http://musescore.org</a> on 2012. 01. 10. k</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -1193,7 +1193,7 @@ Operating System (OS): Set of programs written in the aim to set up a computer f
 </div>
 </div>
     <div class="print-taxonomy"></div>
-    <div class="print-footer">Közzétéve a <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a> licensz alatt, 2002-2011 <a href="mailto:werner@musescore.org">Werner Schweer</a> és mások.</div>
+    <div class="print-footer">Közzétéve a <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a> licensz alatt, 2002-2012 <a href="mailto:werner@musescore.org">Werner Schweer</a> és mások.</div>
     <hr class="print-hr" />
     <div class="print-source_url"></div>
     <div class="print-links"></div>
