--- a/branches/mscore-0-9-6/mscore/manual/sources/MuseScore-ja.html
+++ b/branches/mscore-0-9-6/mscore/manual/sources/MuseScore-ja.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_43d90250c9ab94a8807975fa55ed77ce.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_1235a5ac4806bd06c10cbbc6c4f54278.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"musescore":{"ytlang":"ja"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/ja/%E3%83%8F%E3%83%B3%E3%83%89%E3%83%96%E3%83%83%E3%82%AF/%E3%83%8F%E3%83%B3%E3%83%89%E3%83%96%E3%83%83%E3%82%AF' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_37c26628655d78e5039a1e41d45c9ca3.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_59b91a212b7eab40c05807c179375612.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">作曲＆楽譜作成のフリーソフトウェア</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/ja">http://musescore.org</a> on 水, 07/27/2011</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/ja">http://musescore.org</a> on 火, 2012-01-10</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -195,7 +195,7 @@ yum localinstall musescore-0.9.4-1.fc10.x86_64.rpm</pre></li>
   </div>
 <div id="node-2782" class="section-3">
   <h1 class="book-heading">コピーと貼り付け</h1>
-  <p>MuseScoreでは1つ1つの音符やスコアの広い範囲を指定してコピーできます。0.9.4リリースには、シフト-ドラッグ選択のためのサポートを含むコピー・貼り付けに対する多くの改善を含んでいます。 バージョン0.9.3以前でのコピー・貼り付けは、完全な小節に限られ、使用が困難でした（<a href="print/book/export/html/2696#copy-paste-0.9.3">以下</a>の手引きを参照してください）。</p>
+  <p>コピーと貼り付けは、繰り返しの多い音楽や一部が1〜2音ずれる時に便利なツールです。</p>
 <h3>コピー</h3>
 <ol>
 <li>範囲の最初の音符をクリックしてください。</li>
@@ -206,18 +206,6 @@ yum localinstall musescore-0.9.4-1.fc10.x86_64.rpm</pre></li>
 <ol>
 <li>貼り付けを始めたい場所の音符か小節をクリックしてください。</li>
 <li>メニューから<kbd><samp class="menu">編集（Edit）</samp> → <samp class="menuitem">貼り付け（Paste）</samp></kbd>を選んでください。</li>
-</ol>
-<h3 id="copy-paste-0.9.3">0.9.3以前のための手引き</h3>
-<h4>コピー</h4>
-<ol>
-<li>小節の空白部分から完全な小節までクリックしてください。（青い長方形で範囲が反転表示されます。）</li>
-<li>範囲を拡張したい場合は、その他の小節の空白部分で<kbd><kbd>Shift</kbd>+<kbd class="mouse">クリック</kbd></kbd>してください。</li>
-<li>メニューから<kbd><samp class="menu">編集（Edit）</samp> → <samp class="menuitem">コピー（Copy）</samp></kbd>を選択してください。</li>
-</ol>
-<h4>貼り付け</h4>
-<ol>
-<li>貼り付けたい小節の空白部分をクリックしてください。</li>
-<li>メニューから<kbd><samp class="menu">編集（Edit）</samp> → <samp class="menuitem">貼り付け（Paste）</samp></kbd>を選択してください。</li>
 </ol>
   </div>
 <div id="node-2901" class="section-3">
@@ -546,10 +534,10 @@ yum localinstall musescore-0.9.4-1.fc10.x86_64.rpm</pre></li>
 <h3>方法１</h3>
 <p>最初の音符を選択してください。</p>
 <p><img src="/sites/musescore.org/files/tie1_0.png" alt="選択された最初の音符" title="選択された最初の音符" width="136" height="78" class="inline" /></p>
-<p><kbd><kbd>+</kbd></kbd>でタイを作成します。（バージョン0.9.3以前では、このショートカットは<kbd><kbd>Shift</kbd>+<kbd>S</kbd></kbd>です。）</p>
+<p><kbd><kbd>+</kbd></kbd>でタイを作成します。</p>
 <p><img src="/sites/musescore.org/files/tie2_0.png" alt="音符に合ったスラー" title="音符に合ったスラー" width="136" height="78" class="inline" /></p>
 <h3>方法２</h3>
-<p><samp class="mode"><a href="http://musescore.org/ja/ハンドブック/音符の入力" title="音符の入力">音符の入力</a></samp>中にタイを作成するためには、タイの最初の音符の後で<kbd><kbd>+</kbd></kbd>を押します。 バージョン0.9.3以前では、最初の音符を追加する<em>前に</em>を<kbd><kbd>+</kbd></kbd>押さなければなりません。</p>
+<p><samp class="mode"><a href="http://musescore.org/ja/ハンドブック/音符の入力" title="音符の入力">音符の入力</a></samp>中にタイを作成するために、タイの最初の音符の後で<kbd><kbd>+</kbd></kbd>を押します。</p>
   </div>
 <div id="node-2970" class="section-3">
   <h1 class="book-heading">拍子記号</h1>
@@ -765,16 +753,15 @@ Other commands in <samp class="mode">編集モード</samp>での他のコマン
 <li><kbd><kbd>Ctrl</kbd>+<kbd>B</kbd></kbd>（Mac: <kbd><kbd>⌘</kbd>+<kbd>B</kbd></kbd>）<b>太字</b>体への切り替え</li>
 <li><kbd><kbd>Ctrl</kbd>+<kbd>I</kbd></kbd>（Mac: <kbd><kbd>⌘</kbd>+<kbd>I</kbd></kbd>）<i>斜体</i>への切り替え</li>
 <li><kbd><kbd>Ctrl</kbd>+<kbd>U</kbd></kbd>（Mac: <kbd><kbd>⌘</kbd>+<kbd>U</kbd></kbd>）<u>下線</u>への切り替え</li>
-<li><kbd><kbd>Up</kbd></kbd>上付きの入力開始、または、下付きモード時には下付き入力の終了</li>
-<li><kbd><kbd>Down</kbd></kbd>下付きの入力開始、または、上付きモード時には上付き入力の終了</li>
-<li>カーソルの移動: <kbd><kbd>Home</kbd></kbd> <kbd><kbd>End</kbd></kbd> <kbd><kbd>Left</kbd></kbd> <kbd><kbd>Right</kbd></kbd></li>
+<li>カーソルの移動: <kbd><kbd>Home</kbd></kbd> <kbd><kbd>End</kbd></kbd> <kbd><kbd>&larr;</kbd></kbd> <kbd><kbd>&rarr;</kbd></kbd></li>
 <li><kbd><kbd>Backspace</kbd></kbd>カーソルの左側から文字を削除する。</li>
 <li><kbd><kbd>Delete</kbd></kbd>カーソルの右側から文字を削除する。</li>
 <li><kbd><kbd>Return</kbd></kbd>新しい行を始める。</li>
-<li><kbd><kbd>F2</kbd></kbd>テキストパレットの表示。テキストパレットは、特殊文字と特殊記号の入力に使用できる。</li>
+<li><kbd><kbd>F2</kbd></kbd>テキスト記号を挿入する（下記参照）。</li>
 </ul>
-<p>テキストパレット:</p>
-<p><img src="/sites/musescore.org/files/special-text-symbols_1.png" alt="テキストパレットには、配置、スタイル、サイズ、フォントを変更するための方法や、４分音符のような記号あるいはコピーライト記号やアクセント付文字のような特殊文字をテキストに挿入するためのプラスボタンがある" title="テキストパレットには、配置、スタイル、サイズ、フォントを変更するための方法や、４分音符のような記号あるいはコピーライト記号やアクセント付文字のような特殊文字をテキストに挿入するためのプラスボタンがある" width="562" height="263" class="inline" /></p>
+<h3>シンボルと特殊記号</h3>
+<p>4分音符、分数、その他の特殊なシンボルや記号をテキストに挿入するために、テキストシンボル（Text Symbol）が使用できます。ツールバーでキーボードアイコン<img src="/sites/musescore.org/files/special-text-symbols-button.png" alt="special-text-symbols-button.png" title="special-text-symbols-button.png" width="31" height="28" class="inline" />をクリックし、テキストシンボルパレットを開いてください。<br />
+<img src="/sites/musescore.org/files/special-text-symbols_1.png" alt="テキストシンボルパレットには、テキストに4分音符やコピーライト記号・アクセント付き文字などの特殊記号のようなシンボルを挿入するためのボタンが含まれています。" title="テキストシンボルパレットには、テキストに4分音符やコピーライト記号・アクセント付き文字などの特殊記号のようなシンボルを挿入するためのボタンが含まれています。" width="562" height="263" class="inline" /></p>
 <p>関連項目: <a href="http://musescore.org/ja/ハンドブック/コードネーム" title="コードネーム">コードネーム</a>, <a href="http://musescore.org/ja/ハンドブック/歌詞" title="歌詞">歌詞</a>, <a href="http://musescore.org/ja/ハンドブック/フレーム" title="フレーム">フレーム</a>, <a href="http://musescore.org/ja/ハンドブック/編集モード" title="編集モード">編集モード</a></p>
   </div>
 <div id="node-2909" class="section-3">
@@ -910,16 +897,16 @@ MuseScoreでは、次のように入力できます。</p>
   <p>サポートの要求を<a href="http://musescore.org/ja/forum">フォーラム</a>に投稿する前に:</p>
 <ul>
 <li><a href="http://musescore.org/ja/ハンドブック">ハンドブック</a>に解決策がないか探してください！</li>
-<li><a href="http://musescore.org/ja/forum">フォーラム</a>で他の誰かが既に同じ問題に遭遇していないか見るために、ウェブサイトの<a href="http://musescore.org/ja/search">検索</a>機能を使ってください。</li>
+<li><a href="http://musescore.org/ja/forum">フォーラム（日本語）</a>で他の誰かが既に同じ問題に遭遇していないか見るために、ウェブサイトの<a href="http://musescore.org/ja/search">検索</a>機能を使ってください。</li>
 <li>エラー報告を投稿する場合には、まず<a href="http://musescore.org/en/download">最新プレリリース</a>でその問題が再現されるか試してください。 既に解決されていないかチェックするため、<a href="http://mscore.svn.sourceforge.net/viewvc/mscore/trunk/mscore/ChangeLog">version history</a>も見たほうがよいでしょう。</li>
 </ul>
 <p>サポートの要求あるいはバグ報告を投稿するときは、あなたの知りうる以下の情報を十分に含むようにしてください。</p>
 <ul>
-<li>使用しているMuseScoreバージョン（例 version 0.9.5）あるいはプレリリース版を使用している場合には、リビジョン・ナンバー（例 revision 1944）</li>
-<li>実行しているオペレーティング・システム（例 Windows Vista、Mac OS 10.5、Ubuntu 9.04）</li>
+<li>使用しているMuseScoreバージョン（例 version 1.0）あるいはプレリリース版を使用している場合には、リビジョン・ナンバー（例 revision 3996）</li>
+<li>実行しているオペレーティング・システム（例 Windows Vista、Windows 7、Mac OS 10.6、Ubuntu 10.10）</li>
 <li>バグを報告する場合、その問題に至る正確なステップを記述してください（どこをクリックしたのか、どのキーを押したのか、何を見るのか、など）。 もしそのステップで問題を際限できない場合には、それは開発者も再現できない（解決できない）ため、価値のある報告ではありません。</li>
-<li>issue trackerでは、あなたのレポートは、１レポートにつき１つのバグに制限してください。</li>
-<li>バグレポートの目標は、単にバグを示すことだけではなく、他の人がバグを簡単に再現できるようにすることを覚えていてください。</li>
+<li>issue trackerでレポートする際には、１レポートにつき１つのバグに制限してください。</li>
+<li>バグレポートの目標は、単にバグを示すことだけではなく、他の人がバグを簡単に再現できるようにするということを覚えていてください。</li>
 </ul>
   </div>
 <div id="node-2771" class="section-3">
@@ -981,20 +968,20 @@ MuseScoreでは、次のように入力できます。</p>
   <h1 class="book-heading">付録</h1>
     <div id="node-7105" class="section-3">
   <h1 class="book-heading">キーボード・ショートカット</h1>
-  <p>キーボード・ショートカットは、 <kbd><samp class="menu">編集（Edit）</samp> → <samp class="menuitem">設定...（Preferences...）</samp> → <samp class="tab">ショートカット（Shortcuts）</samp>タブ</kbd>からカスタマイズできます。以下は、初期状態のショートカット設定のリストです。</p>
+  <p>キーボード・ショートカットは、 <kbd><samp class="menu">編集（Edit）</samp> → <samp class="menuitem">設定...（Preferences...）</samp> → <samp class="tab">ショートカット（Shortcuts）</samp>タブ</kbd>からカスタマイズできます。（Mac: <kbd><samp class="menu">MuseScore</samp> → <samp class="menuitem">Preferences...</samp> → <samp class="tab">ショートカット（Shortcuts）</samp></kbd> タブ）　以下は、初期状態のショートカット設定のリストです。</p>
 <h3>ナビゲーション</h3>
-<p>スコアの先端へ: <kbd><kbd>Home</kbd></kbd><br />
-スコアの終端へ: <kbd><kbd>End</kbd></kbd></p>
+<p>スコアの最初へ: <kbd><kbd>Home</kbd></kbd><br />
+スコアの最終ページへ: <kbd><kbd>End</kbd></kbd></p>
 <p>次ページ: <kbd><kbd>Pg Dn</kbd></kbd><br />
 前ページ: <kbd><kbd>Pg Up</kbd></kbd></p>
-<p>次の小節: <kbd><kbd>Ctrl</kbd>+<kbd>Right</kbd></kbd><br />
-前の小節: <kbd><kbd>Ctrl</kbd>+<kbd>Left</kbd></kbd></p>
-<p>次の音符: <kbd><kbd>Right</kbd></kbd><br />
-前の音符: <kbd><kbd>Left</kbd></kbd></p>
-<p>下の音符（コード内で、あるいは下の譜表へ）: <kbd><kbd>Alt</kbd>+<kbd>Down</kbd></kbd><br />
-上の音符（コード内で、あるいは上の譜表へ）: <kbd><kbd>Alt</kbd>+<kbd>Up</kbd></kbd></p>
-<p>コード内の上の音符: <kbd><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Up</kbd></kbd><br />
-コード内の下の音符: <kbd><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Down</kbd></kbd></p>
+<p>次の小節: <kbd><kbd>Ctrl</kbd>+<kbd>&rarr;</kbd></kbd>（Mac: <kbd><kbd>⌘</kbd>+<kbd>&rarr;</kbd></kbd>）<br />
+前の小節: <kbd><kbd>Ctrl</kbd>+<kbd>&larr;</kbd></kbd>（Mac: <kbd><kbd>⌘</kbd>+<kbd>&larr;</kbd></kbd>）</p>
+<p>次の音符: <kbd><kbd>&rarr;</kbd></kbd><br />
+前の音符: <kbd><kbd>&larr;</kbd></kbd></p>
+<p>下の音符（コード内で、あるいは下の譜表へ）: <kbd><kbd>Alt</kbd>+<kbd>&darr;</kbd></kbd><br />
+上の音符（コード内で、あるいは上の譜表へ）: <kbd><kbd>Alt</kbd>+<kbd>&uarr;</kbd></kbd></p>
+<p>コード内の上の音符: <kbd><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>&uarr;</kbd></kbd><br />
+コード内の下の音符: <kbd><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>&darr;</kbd></kbd></p>
 <h3>音符の入力</h3>
 <p>音符入力モードを開始する: <kbd><kbd>N</kbd></kbd><br />
 音符入力モードを終了する: <kbd><kbd>N</kbd></kbd> or <kbd><kbd>Esc</kbd></kbd></p>
@@ -1003,43 +990,43 @@ MuseScoreでは、次のように入力できます。</p>
 <p>前の音符の半分の音価: <kbd><kbd>Q</kbd></kbd><br />
 前の音符の２倍の音価: <kbd><kbd>W</kbd></kbd></p>
 <h4>声部</h4>
-<p><a href="http://musescore.org/ja/ハンドブック/声部" title="声部">声部</a> 1: <kbd><kbd>Ctrl</kbd>+<kbd>I</kbd>, <kbd>Ctrl</kbd>+<kbd>1</kbd></kbd><br />
-声部 2: <kbd><kbd>Ctrl</kbd>+<kbd>I</kbd>, <kbd>Ctrl</kbd>+<kbd>2</kbd></kbd><br />
-声部 3: <kbd><kbd>Ctrl</kbd>+<kbd>I</kbd>, <kbd>Ctrl</kbd>+<kbd>3</kbd></kbd><br />
-声部 4: <kbd><kbd>Ctrl</kbd>+<kbd>I</kbd>, <kbd>Ctrl</kbd>+<kbd>4</kbd></kbd></p>
+<p><a href="http://musescore.org/ja/ハンドブック/声部" title="声部">声部</a> 1: <kbd><kbd>Ctrl</kbd>+<kbd>I</kbd>, <kbd>Ctrl</kbd>+<kbd>1</kbd></kbd>（Mac: 未定）<br />
+声部 2: <kbd><kbd>Ctrl</kbd>+<kbd>I</kbd>, <kbd>Ctrl</kbd>+<kbd>2</kbd></kbd>（Mac: 未定）<br />
+声部 3: <kbd><kbd>Ctrl</kbd>+<kbd>I</kbd>, <kbd>Ctrl</kbd>+<kbd>3</kbd></kbd>（Mac: 未定）<br />
+声部 4: <kbd><kbd>Ctrl</kbd>+<kbd>I</kbd>, <kbd>Ctrl</kbd>+<kbd>4</kbd></kbd>（Mac: 未定）</p>
 <h4>音高</h4>
 <p><i>音の高低は音名またはMIDIキーボードにより入力できます。詳しくは、<a href="http://musescore.org/ja/ハンドブック/音符の入力" title="音符の入力">音符の入力</a>を参照してください。</i></p>
 <p>一つ前の音符を繰り返す: <kbd><kbd>R</kbd></kbd></p>
-<p>音程をオクターブ上げる: <kbd><kbd>Ctrl</kbd>+<kbd>Up</kbd></kbd><br />
-音程をオクターブ下げる: <kbd><kbd>Ctrl</kbd>+<kbd>Up</kbd></kbd></p>
-<p>音程を半音上げる: <kbd><kbd>Up</kbd></kbd><br />
-音程を半音下げる: <kbd><kbd>Down</kbd></kbd></p>
+<p>音程をオクターブ上げる: <kbd><kbd>Ctrl</kbd>+<kbd>&uarr;</kbd></kbd>（Mac: <kbd><kbd>⌘</kbd>+<kbd>&uarr;</kbd></kbd>）<br />
+音程をオクターブ下げる: <kbd><kbd>Ctrl</kbd>+<kbd>&darr;</kbd></kbd>（Mac: <kbd><kbd>⌘</kbd>+<kbd>&darr;</kbd></kbd>）</p>
+<p>音程を半音上げる: <kbd><kbd>&uarr;</kbd></kbd><br />
+音程を半音下げる: <kbd><kbd>&darr;</kbd></kbd></p>
 <p>音符にシャープを加える: （拡大のショートカットと重複したため、未定義）<br />
 音符にフラットを加える: <kbd><kbd>-</kbd></kbd></p>
-<p>休符: <kbd><kbd>Space</kbd></kbd></p>
+<p>休符: <kbd><kbd>0</kbd></kbd> (zero). バージョン0.9.6以前 休符: <kbd><kbd>Space</kbd></kbd></p>
 <h4>音程</h4>
 <p>現在の音符の上に音程を加える<kbd><kbd>Alt</kbd>+[Number]</kbd><br />
 現在の音符の下に音程を加える <kbd><kbd>Shift</kbd>+[Number]</kbd></p>
 <h3>方向</h3>
-<p>方向の反転（stem, スラー、タイ, 連符の桁bracket, など）: <kbd><kbd>X</kbd></kbd><br />
+<p>方向の反転（符尾、スラー、タイ、連符の括弧など）: <kbd><kbd>X</kbd></kbd><br />
 符頭の反転: <kbd><kbd>Shift</kbd>+<kbd>X</kbd></kbd></p>
 <h3>アーティキュレーション</h3>
 <p><a href="http://musescore.org/ja/ハンドブック/タイ" title="タイ">タイ</a>: <kbd><kbd>+</kbd></kbd><br />
 <a href="http://musescore.org/ja/ハンドブック/スラー" title="スラー">スラー</a>: <kbd><kbd>S</kbd></kbd><br />
 スタッカート: <kbd><kbd>Shift</kbd>+<kbd>.</kbd></kbd><br />
-クレッシェンド（ヘアピン）: <kbd><kbd>H</kbd></kbd><br />
+クレッシェンド: <kbd><kbd>H</kbd></kbd><br />
 デクレッシェンド: <kbd><kbd>Shift</kbd>+<kbd>H</kbd></kbd></p>
 <h3>歌詞の入力</h3>
-<p>前の音節: <kbd><kbd>Ctrl</kbd>+<kbd>Left</kbd></kbd><br />
-次の音節: <kbd><kbd>Ctrl</kbd>+<kbd>Right</kbd></kbd></p>
-<p>前の連: <kbd><kbd>Ctrl</kbd>+<kbd>Up</kbd></kbd><br />
-次の連: <kbd><kbd>Ctrl</kbd>+<kbd>Down</kbd></kbd></p>
+<p>前の音節: <kbd><kbd>Ctrl</kbd>+<kbd>&larr;</kbd></kbd><br />
+次の音節: <kbd><kbd>Ctrl</kbd>+<kbd>&rarr;</kbd></kbd></p>
+<p>前の連: <kbd><kbd>Ctrl</kbd>+<kbd>&uarr;</kbd></kbd>（Mac: <kbd><kbd>⌘</kbd>+<kbd>&uarr;</kbd></kbd>）<br />
+次の連: <kbd><kbd>Ctrl</kbd>+<kbd>&darr;</kbd></kbd>（Mac: <kbd><kbd>⌘</kbd>+<kbd>&darr;</kbd></kbd>）</p>
 <p><i>より詳しい歌詞のショートカットについては、<a href="http://musescore.org/ja/ハンドブック/歌詞" title="歌詞">歌詞</a>を参照してください。</i></p>
 <h3>表示</h3>
 <p>ナビゲーター: <kbd><kbd>F12</kbd></kbd> (Mac: <kbd><kbd>⌥</kbd>+<kbd>⌘</kbd>+<kbd>N</kbd></kbd>)<br />
 プレイパネル: <kbd><kbd>F11</kbd></kbd> (Mac: <kbd><kbd>⌥</kbd>+<kbd>⌘</kbd>+<kbd>P</kbd></kbd>)<br />
 パレット: <kbd><kbd>F9</kbd></kbd> (Mac: <kbd><kbd>⌥</kbd>+<kbd>⌘</kbd>+<kbd>K</kbd></kbd>)<br />
-ミキサー: <kbd><kbd>F10</kbd></kbd> (Mac: <kbd><kbd>⌥</kbd>+<kbd>⌘</kbd>+<kbd>M</kbd></kbd>)</p>
+ミキサー: <kbd><kbd>F10</kbd></kbd> (Mac: <kbd><kbd>M</kbd></kbd>)</p>
   </div>
 <div id="node-7555" class="section-3">
   <h1 class="book-heading">用語集</h1>
@@ -1061,7 +1048,7 @@ MuseScoreでは、次のように入力できます。</p>
 </div>
 </div>
     <div class="print-taxonomy"></div>
-    <div class="print-footer">Licensed under the <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a> license, 2002-2011 <a href="mailto:werner@musescore.org">Werner Schweer</a> and others.</div>
+    <div class="print-footer">Licensed under the <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a> license, 2002-2012 <a href="mailto:werner@musescore.org">Werner Schweer</a> and others.</div>
     <hr class="print-hr" />
     <div class="print-source_url"></div>
     <div class="print-links"></div>
