--- a/branches/mscore-0-9-6/mscore/manual/sources/MuseScore-zh-hans.html
+++ b/branches/mscore-0-9-6/mscore/manual/sources/MuseScore-zh-hans.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_77d3bb600e8134564c4dcd4022386ef6.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_178b3b36f56f9bff7711bb4d8fa0a288.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"musescore":{"ytlang":"zh-hans"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/zh-hans/%E7%94%A8%E6%88%B7%E6%89%8B%E5%86%8C/%E7%94%A8%E6%88%B7%E6%89%8B%E5%86%8C' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_37c26628655d78e5039a1e41d45c9ca3.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_59b91a212b7eab40c05807c179375612.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">免费的作曲与乐谱软件</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">来自 <a href="http://musescore.org/zh-hans">http://musescore.org</a> 周 星期三, 07/27/2011</div>
+    <div class="print-site_name">来自 <a href="http://musescore.org/zh-hans">http://musescore.org</a> 周 星期二, 01/10/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -431,7 +431,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 </div>
 </div>
     <div class="print-taxonomy"></div>
-    <div class="print-footer">依据 <a href="http://creativecommons.org/licenses/by/3.0/deed.zh">Creative Commons Attribution 3.0</a> 授权发布，2002-2011 <a href="mailto:werner@musescore.org">Werner Schweer</a> 等。</div>
+    <div class="print-footer">依据 <a href="http://creativecommons.org/licenses/by/3.0/deed.zh">Creative Commons Attribution 3.0</a> 授权发布，2002-2012 <a href="mailto:werner@musescore.org">Werner Schweer</a> 等。</div>
     <hr class="print-hr" />
     <div class="print-source_url"></div>
     <div class="print-links"></div>
